# PyROOPL

./: .coverage  .gitignore  LICENSE  README.md  main.py  pyproject.toml
example/: algo_abs.rplpp  algo_ackermann.rplpp  algo_adjacent_diff.rplpp  algo_array_copy.rplpp  algo_array_max.rplpp  algo_array_reverse.rplpp  algo_array_shift.rplpp  algo_array_sum.rplpp  algo_binomial.rplpp  algo_bit_adder.rplpp  algo_bit_reversal_perm.rplpp  algo_bubble_sort.rplpp  algo_caesar.rplpp  algo_catalan.rplpp  algo_coin_change.rplpp  algo_collatz.rplpp  algo_convolution.rplpp  algo_count_equal.rplpp  algo_counting_sort.rplpp  algo_crc.rplpp  algo_crt.rplpp  algo_crt3.rplpp  algo_cumulative_product.rplpp  algo_cycle_permutation.rplpp  algo_dct_integer.rplpp  algo_determinant.rplpp  algo_diff_array.rplpp  algo_digits.rplpp  algo_discrete_log.rplpp  algo_dot_product.rplpp  algo_edit_distance.rplpp  algo_euclidean_dist.rplpp  algo_euclidean_rhythm.rplpp  algo_euler_totient.rplpp  algo_extended_gcd.rplpp  algo_factorial.rplpp  algo_fast_power.rplpp  algo_fft_butterfly.rplpp  algo_fib_array.rplpp  algo_floyd_warshall.rplpp  (+74 more)
pyrooplpp/: eval.py  invert.py  lexer.py  parser.py  pretty.py  printer.py  syntax.py  value.py
tests/: conftest.py  test_eval.py  test_eval_advanced.py  test_integration.py  test_invert.py  test_invert_advanced.py  test_lexer.py  test_parser.py  test_pretty.py  test_printer.py  test_syntax.py  test_value.py
